[Upd] avoid double scroll

--- a/static/styles/style.css
+++ b/static/styles/style.css
@@ -162,7 +162,7 @@ html {
     display: grid;
     grid-auto-rows: max-content;
     row-gap: 0.5em;
-    height: calc(100vh - 186px - 3em);
+    height: calc(100vh - 215px - 3em);
     overflow-y: auto;
 }
 
